' Alt + D でUMLのプレビューが開けます
' 対応ソフトが必要ではありますが
' 多分これ見れば導入できる↓
' https://qiita.com/Charotarou/items/10bd47c68a1190061858

@startuml アンケート
先生 --> アンケート : 作成
アンケート --> 児童 : 配布
アンケート --> テーブル : テーブル生成
児童 --> アンケート : 回答
@enduml

@startuml アンケート回答
left to right direction

class Student{
    id : int
    name : string
    GetId() : int
    SetId(int id) : void
    GetName() : string
    SetName(string name) : void
}
class Answer{
    student : Student
    answer1 : int
    answer2 : int
}
class Question{
    question1 : int
    question2 : int
}

Student "1" -- "*" Answer
Answer "*" -- "1" Question
@enduml

@startuml 苦手な食べ物マッチング
児童A --> システム : 苦手な食べ物登録
システム --> 児童テーブル : 児童Aと同じ班の児童を検索
システム --> 児童B : マッチング依頼を送信
児童B --> システム : 依頼を受諾
システム --> 児童A : マッチング成立通知を送信
児童A --> 児童B : 苦手な食べ物を渡す
@enduml

@startuml グラフ閲覧
先生 --> システム : アンケート閲覧
システム --> アンケートテーブル : データを取得
アンケートテーブル --> システム : データを送信
システム --> 先生 : グラフ化してデータを表示
@enduml

@startuml グループ配属
システム --> 先生 : グループ提案
先生 --> システム : グループ修正・承認
システム --> 児童 : グループ分け
@enduml

@startuml 全体図
先生 --> アンケート : 作成
アンケート --> 児童 : 配布
アンケート --> テーブル : テーブル生成
児童 --> アンケート : 回答

児童A --> システム : 苦手な食べ物登録
システム --> 児童テーブル : 児童Aと同じ班の児童を検索
システム --> 児童B : マッチング依頼を送信
児童B --> システム : 依頼を受諾
システム --> 児童A : マッチング成立通知を送信
児童A --> 児童B : 苦手な食べ物を渡す

先生 --> システム : アンケート閲覧
システム --> アンケートテーブル : データを取得
アンケートテーブル --> システム : データを送信
システム --> 先生 : グラフ化してデータを表示

システム --> 先生 : グループ提案
先生 --> システム : グループ修正・承認
システム --> 児童 : グループ分け
@enduml